@@ -20,3 +20,4 @@ spiritball: 60
 itemlist: 40
 effect: 40
 storagelist: 40
+item: 60
